    - Date: Sat, 10 May 2008 18:08:48 -0000

  * Resolved bugs:
    - kdm password field is again reachable without mouse click when using
      Debian kdm theme. (Closes: #478666)

  +++ Changes by Modestas Vainius:

  * Update install files.
  * Resync 97_ patch.

  +++ Changes by Armin Berres:

  * Raise libkwineffects1 shlibs version in debian/rules.

  +++ Changes by Fathi Boudra:

  * Add 20 patch to use DejaVu font as default font.
  * Fix 97_fix_target_link_libraries patch:
    proper libplasma target link libraries.
  * Add libqt4-opengl-dev build dependency since Qt4 split.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 May 2008 21:08:48 +0300

kdebase-workspace (4:4.0.72-1) experimental; urgency=low

  * New upstream snapshot (tag r802761):
    - The latest upstream commit is r802727 by mlaurent
    - Date: Wed, 30 Apr 2008 15:35:52 -0000

  +++ Changes by Modestas Vainius:

  * Add libstreamanalyzer-dev, libfontconfig-dev, libglu1-mesa-dev to build depends.
    (Closes: #477344)
  * Add 97_fix_target_link_libraries.diff which fixes linkage problems with
    recent kdelibs5.
  * Do not install printer-applet on purpose.

  +++ Changes by Armin Berres:

  * Add libsm-dev, libxft-dev and libxtst-dev to build depends.
  * Bump shlibs version of libplasma1.
  * Build depend on kdepimlibs and libphonon from latest snapshot.

  +++ Changes by Fathi Boudra:

  * Update installed files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 30 Apr 2008 18:51:02 +0300

kdebase-workspace (4:4.0.68+svn794641-1) experimental; urgency=low

  [ Debian Qt/KDE Maintainers ]
  * New usptream snapshot.

  +++ Changes by Sune Vuorela:

  * Move some files to -runtime/not-installed. Moved upstream. This is post 
    revision 792360.

  +++ Changes by Modestas Vainius:

  * Mention KWin in the kde-window-manager description.

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Update installed files.